[project]
name = "get-busy-app"
version = "0.1.0"
description = "Track your goals!"
authors = [
    {name = "Max Lapchuk",email = "makslapchuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.127.1,<0.128.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
